Fixed Heights
Heights for each carousel can be set within JSON. Fixed overlapping row.
Only problem is img sizing correctly for if there is a caption.

--- a/assets/DemoStyle.css
+++ b/assets/DemoStyle.css
@@ -21,6 +21,12 @@
     font-size: 16px;
 }
 
+.col {
+    max-height: 100%;
+}
+.caption-text{
+    font-size: 8px;
+}
 .vid-wrapper{
     position: relative;
     width: 100%;
@@ -37,8 +43,7 @@
 }
 
 .img-wrapper{
-    height: 200px;
-    width: 200px;
+    height: 75%;
     overflow: hidden;
 }
 
